# ITK

./: .gitignore  pyproject.toml
m_1/: attrs_class.py  lru_cache.py  unit_py_tests.py
m_1/singletons/: singleton_import.py  singleton_meta.py  singleton_module.py  singleton_new.py
m_1/tests/: py_test.py  unit_test.py
m_2/: search.py
m_3/: fetch_urls_1.py  fetch_urls_2.py  results_1.jsonl  results_2.jsonl  urls.txt
m_4/: results.json  threads.py
m_6/: asgi.py
src/pyproj/: __init__.py
