[project]
name = "pyproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gmorong", email = "146980143+gmorong@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
pyproj = "pyproj:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
